Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18215

mariabackup does not report unknown command line options

    XMLWordPrintable

Details

    Description

      E.g. '--no-such-option raises neither an error nor a warning:

      /usr/local/mysql-maria-10.1.34/bin/mariabackup --backup --no-such-option
      ​
      190111 18:34:27 Connecting to MySQL server host: 127.0.0.1, user: root, password: not set, port: not set, socket: not set
      Using server version 10.1.34-MariaDB
      /usr/local/mysql-maria-10.1.34/bin/mariabackup based on MariaDB server 10.1.34-MariaDB Linux (x86_64) 
      mariabackup: uses posix_fadvise().
      mariabackup: cd to /usr/local/mysql-maria-10.1.34/var/
      mariabackup: open files limit requested 0, set to 1024
      mariabackup: using the following InnoDB configuration:
      mariabackup:   innodb_data_home_dir = 
      mariabackup:   innodb_data_file_path = ibdata1:12M:autoextend
      mariabackup:   innodb_log_group_home_dir = ./
      mariabackup:   innodb_log_files_in_group = 2
      mariabackup:   innodb_log_file_size = 50331648
      190111 18:34:27 >> log scanned up to (16343589175)
      mariabackup: Generating a list of tablespaces
      190111 18:34:27 [01] Copying ibdata1 to /home/hartmut/Downloads/xtrabackup_backupfiles/ibdata1
      ...
      

      This is especially a problem when trying to use an option that was only added in a later version.

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.