MDEV-18215: mariabackup does not report unknown command line options MDEV-20552: Remove innobackupex mode from Mariabackup

There are 3 sets of options supported by mariabackup: server
options(xb_server_options), client options(xb_client_options),
innobackupex options(ibx_long_options).

The solution is in joining xb_server_options and xb_client_options to process
command line options with handle_options() function before loading defaults
from .cnf file, and then continue the usual execution if handle_options()
does not return an error.

innobackupex options are removed as they can not be joined with
xb_server_options and xb_client_options straightforwardly, as they has
separate option id's(enum innobackupex_options), and it's own function
to process single option(ibx_get_one_option).